--- a/app/views/cars/_cars.html.erb
+++ b/app/views/cars/_cars.html.erb
@@ -17,7 +17,7 @@
   <tbody>
     <% @cars.each do |car| %>
       <tr>
-        <td class="align-middle"><h5><%= car.brand.name %> <%= car.brand.model %></h5></td>
+        <td class="align-middle"><h4><%= car.brand.name %> <%= car.brand.model %></h4></td>
         <td class="align-middle"><%= car.year %></td>
         <td class="align-middle"><%= number_to_currency(car.features["Price"].to_f, :precision => (car.features["Price"].to_f.round == car.features["Price"].to_f) ? 0 : 2 ) %></td>
         <td class="align-middle"><%= car.features["Mileage"] %></td>
@@ -25,8 +25,8 @@
         <td class="align-middle"><% unless car.sale_date.nil? %><%= car.sale_date.strftime('%Y-%m-%d at %H:%M') %><% end %></td>
         <td class="align-middle"><%= image_tag car.image, style: "height: 50px; width: 100%; max-width: 80px;" %></td>
         <td class="hidden"><%= link_to 'Show', car %></td>
-        <td class="align-middle"><%= link_to 'Edit', edit_car_path(car), remote: true, class: "btn btn-warning btn-lg" %></td>
-        <td class="align-middle"><%= link_to 'Destroy', car, remote: true, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-lg" %></td>
+        <td class="align-middle"><%= link_to 'Edit', edit_car_path(car), remote: true, class: "btn btn-warning", style: "width: 75px;" %></td>
+        <td class="align-middle"><%= link_to 'Destroy', car, remote: true, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger", style: "width: 75px;" %></td>
       </tr>
     <% end %>
   </tbody>
