--- a/app/views/brands/_brands.html.erb
+++ b/app/views/brands/_brands.html.erb
@@ -1,37 +1,40 @@
 <h3 class="text-center">All Brand - Models</h3>
-<div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Brand - Model</th>
-            <th>For Sale</th>
-            <th>Sold</th>
-            <th colspan="2"></th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @brands.each do |brand| %>
+<hr>
+  <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+        <div style="background: white; border-radius: 13px; padding: 10px;">
+        <table class="table table-striped">
+          <thead>
             <tr>
-              <td class="align-middle"><h4><%= brand.name %> <%= brand.model %></h4></td>
-              <td class="align-middle"><% counter = 0 %>
-                  <% brand.cars.where(sale_status: "For Sale").each do %>
-                      <% counter += 1 %>
-                  <% end %>
-                  <%= counter %>
-              </td>
-              <td class="align-middle"><% counter = 0 %>
-                  <% brand.cars.where(sale_status: "Sold").each do %>
-                      <% counter += 1 %>
-                  <% end %>
-                  <%= counter %>
-              </td>
-              <td class="align-middle"><%= link_to 'Edit', edit_brand_path(brand), remote: true, class: "btn btn-warning", style: "width: 75px;" %></td>
-              <td class="align-middle"><%= link_to 'Destroy', brand, remote: true , method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger", style: "width: 75px;" %></td>
+              <th>Brand - Model</th>
+              <th>For Sale</th>
+              <th>Sold</th>
+              <th colspan="2"></th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+
+          <tbody>
+            <% @brands.each do |brand| %>
+              <tr>
+                <td class="align-middle"><h4><%= brand.name %> <%= brand.model %></h4></td>
+                <td class="align-middle"><% counter = 0 %>
+                    <% brand.cars.where(sale_status: "For Sale").each do %>
+                        <% counter += 1 %>
+                    <% end %>
+                    <%= counter %>
+                </td>
+                <td class="align-middle"><% counter = 0 %>
+                    <% brand.cars.where(sale_status: "Sold").each do %>
+                        <% counter += 1 %>
+                    <% end %>
+                    <%= counter %>
+                </td>
+                <td class="align-middle"><%= link_to 'Edit', edit_brand_path(brand), remote: true, class: "btn btn-warning", style: "width: 75px;" %></td>
+                <td class="align-middle"><%= link_to 'Destroy', brand, remote: true , method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger", style: "width: 75px;" %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
+</div>
