--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -8,10 +8,10 @@
         <%= link_to cars_path, remote: true, class: "btn btn-primary btn-lg btn-block", style: "margin-bottom: 5px;" do %> <i class="fa fa-car fa-fw"></i></span> All Cars <% end %>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-        <%= link_to new_brand_path, remote: true, class: "btn btn-default btn-lg btn-block", style: "margin-bottom: 5px;" do %> <span class="glyphicon glyphicon-plus"></span> Add Brand & Model <% end %>
+        <%= link_to new_brand_path, remote: true, class: "btn btn-default btn-lg btn-block", style: "margin-bottom: 5px;" do %> <span class="glyphicon glyphicon-plus"></span> ADD BRAND & MODEL <% end %>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-        <%= link_to brands_path, remote: true, class: "btn btn-default btn-lg btn-block" do %> <i class="fa fa-car fa-fw"></i></span> All Brand - Models <% end %>
+        <%= link_to brands_path, remote: true, class: "btn btn-default btn-lg btn-block" do %> <i class="fa fa-car fa-fw"></i></span> ALL BRAND - MODELS <% end %>
       </div>
   </div>
   <hr style="margin: 10px 0;">
