--- a/app/views/welcome/_sell.html.erb
+++ b/app/views/welcome/_sell.html.erb
@@ -22,7 +22,7 @@
         		<% end %>
 					<tr>
 						<td style="border-top: none !important;">Mileage: </td>
-						<td style="border-top: none !important;"><%= car.features["Mileage"] %> miles</td>
+						<td style="border-top: none !important;"><%= car.features["Mileage"] %> Miles</td>
 					</tr>
 					<tr>
 						<td style="border-top: none !important;"><b>Price: </b></td>
@@ -63,7 +63,7 @@
 				        		<% end %>
 									<tr>
 										<td style="border-top: none !important;">Mileage: </td>
-										<td style="border-top: none !important;"><%= car.features["Mileage"] %> miles</td>
+										<td style="border-top: none !important;"><%= car.features["Mileage"] %> Miles</td>
 									</tr>
 									<tr>
 										<td style="border-top: none !important;"><strong>PRICE: </strong></td>
