--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -340,7 +340,7 @@
             <%= form.file_field :image, class: "form-control input-lg" %>
       </div>
 
-      <div class="form-group hidden">
+      <div class="form-group">
         <strong>UPLOAD CAR GALLERY PICTURES:</strong>
         <%= file_field_tag "images[]", type: :file, multiple: true, class: "form-control input-lg" %>
       </div>
