--- a/app/views/welcome/_sell.html.erb
+++ b/app/views/welcome/_sell.html.erb
@@ -41,11 +41,56 @@
 				        <h4 class="modal-title text-center" id="myModalLabel"><%= car.year %> <%= car.brand.name %> <%= car.brand.model %></h4>
 				      </div>
 				      <div class="modal-body">
+				       <% if car.car_pictures.count == 0 %>
 				      	<div class="row">
 				      		<div class="col-lg-12">
 				        		<%= image_tag car.image, class: "img-rounded", style: "height: 350px; width: 100%; margin-bottom: 20px;" %>
 				        	</div>
 				        </div>
+				       <% else %>
+
+
+				       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+							  <!-- Indicators -->
+							  <ol class="carousel-indicators">
+							  	<li data-target="#carousel-example-generic" data-slide-to="-1" class="active"></li>
+							    <% car.car_pictures.each_with_index do |picture, index| %>
+							      <li data-target="#carousel-example-generic" data-slide-to="<%= index %>"></li>
+							    <% end %>
+							  </ol>
+
+							  <!-- Wrapper for slides -->
+							  <div class="carousel-inner" role="listbox">
+
+							  	 <div class="item active">
+							       <%= image_tag car.image, class: "img-rounded", style: "height: 350px; width: 100%; margin-bottom: 20px;" %>
+								      <div class="carousel-caption">
+								        ...
+								      </div>
+								  </div>
+							  	
+							    <% car.car_pictures.each_with_index do |picture, index| %>
+
+							     <div class="item">
+							        <%= image_tag picture.image, class: "img-rounded", style: "height: 350px; width: 100%; margin-bottom: 20px;" %>
+							     </div>
+							    <% end %>
+							  </div>
+
+							  <!-- Controls -->
+							  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+							    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+							    <span class="sr-only">Previous</span>
+							  </a>
+							  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+							    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+							    <span class="sr-only">Next</span>
+							  </a>
+							</div>
+
+
+						<% end %>
+
 				        <div class="row">
 				        	<div class="col-xs-8 col-sm-6 col-md-6 col-lg-6">
 				        	  <table class="table">
