--- a/app/views/welcome/_header.html.erb
+++ b/app/views/welcome/_header.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="intro-text">
             <div class="intro-lead-in">Welcome To <span style="color: #b30000">SL</span> Autos!</div>
-            <div class="intro-heading">Servicio Espacializado</div>
+            <div class="intro-heading">Servicio Especializado</div>
             <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
         </div>
     </div>
