--- a/app/views/welcome/_sell.html.erb
+++ b/app/views/welcome/_sell.html.erb
@@ -58,14 +58,14 @@
 				       		<% end %>
 
 
-				       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+				       <div id="carousel-example-generic_<%= car.id %>" class="carousel slide" data-ride="carousel">
 							  <!-- Indicators -->
 							  <ol class="carousel-indicators">
 							    <% new_array.each_with_index do |picture, index| %>
 							     <% if index == 0 %>
-							      <li data-target="#carousel-example-generic" data-slide-to="<%= index %>" class="active"></li>
+							      <li data-target="#carousel-example-generic_<%= car.id %>" data-slide-to="<%= index %>" class="active"></li>
 							     <% else %>
-							      <li data-target="#carousel-example-generic" data-slide-to="<%= index %>"></li>
+							      <li data-target="#carousel-example-generic_<%= car.id %>" data-slide-to="<%= index %>"></li>
 							     <% end %>
 							    <% end %>
 							  </ol>
@@ -86,12 +86,11 @@
 							    <% end %>
 							  </div>
 
-							  <!-- Controls -->
-							  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+							  <a class="left carousel-control" href="#carousel-example-generic_<%= car.id %>" role="button" data-slide="prev">
 							    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 							    <span class="sr-only">Previous</span>
 							  </a>
-							  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+							  <a class="right carousel-control" href="#carousel-example-generic_<%= car.id %>" role="button" data-slide="next">
 							    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 							    <span class="sr-only">Next</span>
 							  </a>
