--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,11 +34,10 @@
 	padding: 12px;
 }
 
-/*#login-box {
-	height: 350px;
-}*/
+
 
 .navbar-custom {
-	padding-top: 15px;
-	padding-bottom :15px;
+	background: rgba(0,0,0,0.8);
+	padding-top: 8px;
+	padding-bottom :8px;
 }
