--- a/app/views/welcome/_sell.html.erb
+++ b/app/views/welcome/_sell.html.erb
@@ -1,4 +1,4 @@
-<section id="sell" class="bg-light-gray">
+<section id="sell" class="bg-light-gray" style="padding-top: 75px; padding-bottom: 75px;">
  	<div class="container">
 		<div clas="row">
 		  <% @cars.each do |car| %>
