--- a/app/views/welcome/_sell.html.erb
+++ b/app/views/welcome/_sell.html.erb
@@ -3,7 +3,7 @@
 		<div clas="row">
 		  <% @cars.each do |car| %>
 			<div class="col-sm-6 col-md-4 col-lg-3">
-				<%= image_tag car.image, class: "img-thumbnail", style: "height: 175px; width: 100%; max-width: 260px;margin-bottom: 20px;" %>
+				<%= image_tag car.image, class: "img-thumbnail img-responsive", style: "height: 175px; margin-bottom: 20px;" %>
 				<table class="table">
 					<tr>				
 						<td style="border-top: none !important;" colspan="2"><h5><%= car.year %> <%= car.brand.name %> <%= car.brand.model %></h5></td>
@@ -76,11 +76,11 @@
 							    <% new_array.each_with_index do |picture, index| %>
 							     <% if index == 0 %>
 								     <div class="item active">
-								       <%= image_tag picture, class: "img-rounded", style: "height: 350px; width: 100%; margin-bottom: 20px;" %>
+								       <%= image_tag picture, class: "img-rounded img-responsive", style: "height: 350px; margin-bottom: 20px;" %>
 									  </div>
 								 <% else %>
 									     <div class="item">
-									        <%= image_tag picture, class: "img-rounded", style: "height: 350px; width: 100%; margin-bottom: 20px;" %>
+									        <%= image_tag picture, class: "img-rounded img-responsive", style: "height: 350px; margin-bottom: 20px;" %>
 									     </div>
 								 <% end %>
 							    <% end %>
